--- a/git-task/my-awesome-site/index.html
+++ b/git-task/my-awesome-site/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>My awesome site</h1>
+    <img src="images/61mznKG6ClL.jpg" alt="">
 </body>
 </html>
