more content in html

--- a/git-task/my-awesome-site/index.html
+++ b/git-task/my-awesome-site/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>My awesome site</h1>
     <img src="images/61mznKG6ClL.jpg" alt="">
+    <p>jkbbkjbm,b</p>
+    <p>i want merge conflict</p>
 </body>
 </html>
