--- a/git-task/my-awesome-site/index.html
+++ b/git-task/my-awesome-site/index.html
@@ -10,6 +10,9 @@
     <h1>My awesome site</h1>
     <img src="images/61mznKG6ClL.jpg" alt="">
     <p>jkbbkjbm,b</p>
+    <p>squash1</p>
+    <li>squash2</li>
+    <img src="images/61mznKG6ClL.jpg" alt="">
     
 </body>
 </html>
