--- a/git-task/my-awesome-site/index.html
+++ b/git-task/my-awesome-site/index.html
@@ -13,6 +13,8 @@
     <p>squash1</p>
     <li>squash2</li>
     <img src="images/61mznKG6ClL.jpg" alt="">
+    <p>squash1</p>
+    <li>squash2</li>
     
 </body>
 </html>
