--- a/git-task/my-awesome-site/index.html
+++ b/git-task/my-awesome-site/index.html
@@ -15,6 +15,11 @@
     <img src="images/61mznKG6ClL.jpg" alt="">
     <p>squash1</p>
     <li>squash2</li>
+    <p>    <p>squash1</p>
+    <li>squash2</li>    <p>squash1</p>
+    <li>squash2</li>    <p>squash1</p>
+    <li>squash2</li>    <p>squash1</p>
+    <li>squash2</li></p>
     
 </body>
 </html>
